--- a/scss/partials/_about.scss
+++ b/scss/partials/_about.scss
@@ -1,6 +1,9 @@
 .site-main .about {
     padding: 8rem 5rem;
   }
+  #about {
+    padding-top: 190px;
+  }
   
   .site-main .about .about-title h2 > span {
   display: block;
