--- a/scss/partials/_contactform.scss
+++ b/scss/partials/_contactform.scss
@@ -30,7 +30,7 @@
   line-height: 10px;
 }
 
-#section .wrap {
+#contact .wrap {
   text-align: center;
   width: 100%;
   height: 100%;
@@ -38,7 +38,7 @@
   margin: 450px auto 0 auto;
 }
 
-#section .box {
+#contact .box {
   text-align: center;
   font-size: 1.2em;
   line-height: 1.6em;
@@ -48,7 +48,7 @@
 
 .contact-form {
   width: 100%;
-  margin: 200px auto 0 auto;
+  margin: 210px auto 0 auto;
   padding: 0px 40px;
 }
 
