--- a/scss/partials/_portfolio.scss
+++ b/scss/partials/_portfolio.scss
@@ -4,6 +4,7 @@
     letter-spacing: 0.77px;
     font-weight: 400;
     color: $text-color;
+    padding-top: 210px;
 }
 
 .link {
@@ -66,7 +67,7 @@ a:nth-of-type(3) .card_wrapper {
     background-image: url("../../images/projects/devscreate.png");
 }
 a:nth-of-type(4) .card_wrapper {
-   background-image: url("../images/projects/Jira.png");
+   background-image: url("../images/projects/Jira2.png");
 }
 // card text
 .project_summary {
