--- a/scss/partials/_services.scss
+++ b/scss/partials/_services.scss
@@ -1,6 +1,6 @@
 .site-main .services-area {
-  padding: 7rem 2rem;
-
+  padding: 7rem 2rem 0rem 2rem;
+  margin-bottom: -100px;
   .services-title {
     padding: 0 14rem;
   }
